# SlotSettleGate

./: .gitignore  LICENSE  README.md  pyproject.toml
SlotSettleGate/: __init__.py  cli.py  engine.py  report.py
tests/: test_engine.py
